# OpenCampus

./: .gitignore  CMakeLists.txt  README.md
Common/: Material.h  Matrix.h  Object.h  ObjectData.h  Shape.h  ShapeIndex.h  SolidShape.h  SolidShapeIndex.h  Uniform.h  Util.h  Vector.h  Window.h
Sample1/: CMakeLists.txt  sample1.cpp  sample1.h
Sample2/: CMakeLists.txt  sample2.cpp  sample2.h
Sample3/: CMakeLists.txt  sample3.cpp  sample3.h
Test/: CMakeLists.txt  test.cpp
